# padc

./: .clang-format  .gitignore
old_gen/procedural_terrain_project/src/: CMakeLists.txt  mesh_builder.cpp  terrain_viewer.cpp
old_gen/procedural_terrain_project/src/shaders/: simpler.frag
procedural_terrain_project/: CMakeLists.txt
procedural_terrain_project/src/: camera.cpp  camera.h  mesh_builder.h  perlin.cpp  perlin.h  shader.cpp  shader.h  terrain_all_in_one.cpp  terrain_gen.cpp  terrain_viewer.cpp
terrain_gen/: BENCHMARK_DOCUMENTATION_GUIDE.md  BENCHMARK_README.md  BIOME_COLOR_FIX_SUMMARY.md  CMakelists.txt  CORRECT_BIOME_COLORS.md  DETAILED_WORKFLOW_ANALYSIS.md  EROSION_DEBUG_ANALYSIS.md  OPENMP_PARALLELIZATION_REPORT.md  PARALLELIZATION_REPORT.md  README.md  RIVER_OBJECTS_PARALLELIZATION_REPORT.md  benchmark_runner.py  generate_documentation.py  run_benchmarks.bat  run_benchmarks.ps1  run_complete_benchmark.py  run_full_documentation.py  speedup_analysis.csv  test_benchmark.py  test_biome_colors.py  test_biome_differences.py  test_documentation.py  test_output.json  test_single_resolution.py  testing.py
terrain_gen/_PPT/: PROC GEN.pptx
terrain_gen/_REPORT/: PROCEDURAL TERRAIN GENERATION.md
terrain_gen/assets/: biomes.json  config.json  object_placement.json
terrain_gen/benchmark_output/: MASTER_BENCHMARK_REPORT.md
terrain_gen/benchmark_output/1024x1024/: 14_threads_result.json  1_threads_result.json  20_threads_result.json  2_threads_result.json  4_threads_result.json  8_threads_result.json  BENCHMARK_REPORT.md
terrain_gen/benchmark_output/2048x2048/: 14_threads_result.json  1_threads_result.json  20_threads_result.json  2_threads_result.json  4_threads_result.json  8_threads_result.json  BENCHMARK_REPORT.md
terrain_gen/benchmark_output/256x256/: 14_threads_result.json  1_threads_result.json  20_threads_result.json  2_threads_result.json  4_threads_result.json  8_threads_result.json  BENCHMARK_REPORT.md
terrain_gen/benchmark_output/512x512/: 14_threads_result.json  1_threads_result.json  20_threads_result.json  2_threads_result.json  4_threads_result.json  8_threads_result.json  BENCHMARK_REPORT.md
terrain_gen/src/: benchmark_main.cpp  main.cpp
terrain_gen/src/biome/: BiomeClassifier.h  BiomeHelpers.h  BiomeSystem.h  PARALLELIZATION_REPORT.md
terrain_gen/src/core/: Types.h
terrain_gen/src/erosion/: ErosionParams.h  HydraulicErosion.cpp  HydraulicErosion.h
terrain_gen/src/io/: ImageWriter.cpp  ImageWriter.h
terrain_gen/src/noise/: PerlinNoise.h
terrain_gen/src/objects/: ObjectPlacer.cpp  ObjectPlacer.h
terrain_gen/src/river/: RiverGenerator.cpp  RiverGenerator.h
terrain_gen/src/thermal/: ThermalErosion.cpp  ThermalErosion.h
terrain_gen/src/utils/: util.cpp  util.h
terrain_gen/src/world/: WorldType_Voronoi.cpp  WorldType_Voronoi.h
terrain_gen/tests/: CMakelists.txt
